# reflect

./: Cargo.toml  README.md
crates/reflect-core/: Cargo.toml
crates/reflect-core/src/: lib.rs  pattern.rs
crates/reflect-eval/: Cargo.toml
crates/reflect-eval/src/parsers/: eslint.rs  mod.rs  tsc.rs
crates/reflect-mcp/: Cargo.toml
crates/reflect-mcp/src/: config.rs  main.rs  tools.rs
crates/reflect-store/: Cargo.toml
crates/reflect-store/src/: ctxgraph.rs  lib.rs  schema.sql  sqlite.rs
demo/: demo.cast  demo.sh  demo_client.py  record.sh
tests/fixtures/: eslint_output.txt  tsc_output.txt
