[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rohansx/reflect"
description = "Self-correction engine for AI coding agents"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
strsim = "0.11"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
regex = "1"
# ctxgraph-core: uncomment when ctxgraph is published to crates.io
# ctxgraph-core = { version = "0.7", package = "ctxgraph", default-features = false }
