[package]
name = "reflect-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for reflect"

[[bin]]
name = "reflect-mcp"
path = "src/main.rs"

[features]
default = []
ctxgraph = ["reflect-store/ctxgraph"]

[dependencies]
reflect-core = { path = "../reflect-core" }
reflect-eval = { path = "../reflect-eval" }
reflect-store = { path = "../reflect-store" }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
